--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,6 @@
 		<h1>Hello World!</h1>
 		<p id="dp"></p>
 		<input type="button" onclick="deviceInfo()" value="Mobile info!">
-		<input type="button" onclick="deviceInfo()" value="Ovner info!">
+		<input type="button" onclick="ovnerInfo()" value="Ovner info!">
 	</body>
 </html>
